<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hakoniwa</string>
    <string name="title">HAKONIWA</string>
    <string name="title_jp">箱庭</string>
    <string name="subtitle">Virtuelle Maschine · AArch64</string>
    <string name="status_on">● LÄUFT</string>
    <string name="status_off">● AUS</string>
    <string name="btn_start">▶  Start</string>
    <string name="btn_stop">■  Stopp</string>
    <string name="btn_restart">↻  Neustart</string>
    <string name="btn_clear">Leeren</string>
    <string name="sys_mine">Mein OS</string>
    <string name="sys_example">Beispiel</string>
    <string name="input_hint">Befehl eingeben …</string>
    <string name="send">Senden</string>
    <string name="vm_not_running">Die VM ist aus. Tippe auf Start.</string>
</resources>
